Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29896

mariadb-backup got stuck with --throttle option doing incremental backup

    XMLWordPrintable

Details

    Description

      1. create a table
      2. make a first part of backup:

      sudo mariadb-backup --backup -utest_user -pct570c3521fCCR# --target-dir=backup1 --throttle=2
      

      3. create another table
      4. try to create a second part of incremental backup

      sudo mariadb-backup --backup -utest_user -pct570c3521fCCR# --target-dir=backup1_2 --incremental-basedir=backup1 --throttle=2
      

      Result:
      process stops forever at:

      [00] 2022-10-27 11:44:33 Executing FLUSH NO_WRITE_TO_BINLOG ENGINE LOGS...
      [00] 2022-10-27 11:44:33 mariabackup: The latest check point (for incremental): '42171'
      mariabackup: Stopping log copying thread.....[00] 2022-10-27 11:44:34 >> log scanned up to (751195)
      

      throttle-1.sh - script to reproduce

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              tturenko Timofey Turenko
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.