MDEV-29896 mariadb-backup got stuck with --throttle option doing incremental backup

stop_backup_threads(): Invoke mysql_cond_broadcast() before
mysql_cond_destroy() to avoid a hang in pthread_cond_destroy().
Because we only use timed waits for this condition variable,
it is possible that the __wrefs a.k.a. __nwaiters in GNU libc
will be nonzero.